CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(DRONE)

IF (CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE RELEASE)
ENDIF (CMAKE_BUILD_TYPE STREQUAL "")

option(BUILD_x86_64 "Build x86_64 ARCH" OFF)

IF ( BUILD_x86_64 EQUAL ON)
  SET(LIB_INSTALL_DIR "/usr/lib64")
ELSE ( BUILD_x86_64 EQUAL ON)
  SET(LIB_INSTALL_DIR "/usr/lib")
ENDIF ( BUILD_x86_64 EQUAL ON)

SET( INCLUDE_INSTALL_DIR "/usr/include" )
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )

SET(EXECUTABLE_OUTPUT_PATH "${DRONE_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${DRONE_BINARY_DIR}/lib")

ADD_SUBDIRECTORY(External_Sources)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tools)


INCLUDE_DIRECTORIES(${linux_mpu9150_INCLUDE_DIRS})
LINK_DIRECTORIES(${linux_mpu9150_LIBRARY_DIRS})


INSTALL (FILES "${PROJECT_BINARY_DIR}/lib/liblinux_mpu9150.so" DESTINATION ${LIB_INSTALL_DIR})
#INSTALL (FILES "${linux_mpu9150_HDRS}" DESTINATION ${INLCUDE_INSTALL_DIR})
#EXECUTE_PROCESS(COMMAND chmod a+x "${LIB_INSTALL_DIR}/liblinux_mpu9150.so")
